# tracker

./: .gitignore  .gitmodules  .taurignore  Cargo.toml  LICENSE  README.md  Readme.md  db.sqlite3  diesel.toml  index.html  package.json  tauri.conf.json
migrations/2025-03-18-152202_create_posts/: up.sql
src/: App.css  App.tsx  database.rs  main.rs  models.rs  schema.rs
src/components/: PostForm.tsx  PostList.tsx  Tag.tsx
src/core/components/: ServerControl.tsx
src/core/services/: serverControls.ts
src/core/types/: tauri.d.ts
src/core/utils/: functions.ts
src/pages/entries/: Entries.tsx
src/pages/entries/components/: Editor.tsx  EditorContainer.tsx  ImageUploader.tsx  PostForm.tsx  PostItem.tsx  PostList.tsx
src/pages/llm/: LLM.tsx
src/pages/main/: Main.tsx  main.css
